# voicemeeter-api-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  pyproject.toml  scripts.py
configs/banana/: config.toml  example.toml
configs/basic/: config.toml  example.toml  extender.toml
configs/potato/: config.toml  example.toml  extender.toml
examples/dsl/: __main__.py  setup.py  vm_dsl.py
examples/events/: README.md  __main__.py
examples/gui/: README.md  __main__.py
examples/levels/: README.md  __main__.py
examples/midi/: README.md  __main__.py
examples/obs/: README.md  __main__.py  setup.py
examples/observer/: README.md  __main__.py
tests/: __init__.py  pre-commit.ps1  test_configs.py  test_errors.py  test_factory.py  test_higher.py  test_lower.py
voicemeeterlib/: __init__.py  base.py  bus.py  cbindings.py  command.py  config.py  device.py  error.py  event.py  factory.py  inst.py  iremote.py  kinds.py  macrobutton.py  meta.py  misc.py  recorder.py  remote.py  strip.py  subject.py  updater.py  util.py  vban.py
